--- a/app/assets/stylesheets/_general.scss.erb
+++ b/app/assets/stylesheets/_general.scss.erb
@@ -118,7 +118,7 @@ ul.tags {
     li {
         position: relative;
         float: right;
-        background-color: #E862E5;
+        background-color: #4183C4;
         font-size: 10px;
         list-style: none;
         line-height: $tag-height;
@@ -136,7 +136,7 @@ ul.tags {
             content: '';
             position: absolute;
             left: -$tag-height;
-            @include triangle(left, #E862E5, $tag-height);
+            @include triangle(left, #4183C4, $tag-height);
         }
 
         &:after {
