--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -11,11 +11,15 @@
           </div>
 
           <div class="form-group">
-            <% if @milestone.feedback? %>
-              <%=      f.label t('milestone_reviewer')%>
+            <%= f.label t('milestone_category')%>
+            <br>
+            <%= f.select :category, Category.all.collect {|t| [t.name, t.id]}, {}, {:multiple => false, :class => "chzn-select category", 'style'=> 'width:100%'} %>
+          </div>
+
+          <div class="form-group feedback_autor">
+              <%=  f.label t('milestone_reviewer')%>
               <br>
-              <%= f.select :feedback_author, Person.all.collect {|t| [t.name, t.id]}, {}, {:multiple => false, :class => "input-lg"} %>
-            <% end %>
+              <%= f.select :feedback_author, Person.all.collect {|t| [t.name, t.id]}, {}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'style'=> 'width:100%'} %>
           </div>
 
           <div class="form-group">
@@ -43,4 +47,19 @@
   </div>
 </div>
 
-<script> $(".chzn-select").chosen();</script>
+<script>
+    $(".chzn-select").chosen();
+</script>
+<script>
+    $('.category').change( function() {
+    var selectedValue = $(this).find('option:selected').val();
+        if (selectedValue==2){
+            $('.feedback_autor').show('slow');
+        }
+        if (selectedValue!=2){
+            $('.feedback_autor').hide('slow');
+            $('.select_author').val('').trigger("select_author:updated");
+        }
+    });
+
+</script>
