--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -306,7 +306,7 @@ ul#milestone-list {
       }
 
       h2{
-          margin: 0 0 10px 0;
+          margin: 0 35px 10px 35px;
           font-size: 18px;
 
           a {
