--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -1,5 +1,10 @@
 <div id="milestone-info">
-  <%= milestone_status(@milestone) %>
+  <% store_return_to %>
+  <%= if @milestone.status != 'rejected'
+        milestone_status(@milestone)
+      end %>
+  <%= milestone_status_rej(@milestone) %>
+
   <div class="left-pane">
     <div class="milestone-icon"><%= image_tag @milestone.icon %></div>
     <h2><%= @milestone.title %></h2>
