--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -52,7 +52,11 @@
       <ul id="milestone-list">
         <% @milestones.each do |e| %>
             <li>
-              <%= milestone_status(e,:small,:right)%>
+              <% store_return_to %>
+              <%= if e.status != 'rejected'
+                    milestone_status(e,:right)
+                  end %>
+              <%= milestone_status_rej(e, :right) %>
               <h2><%=link_to e.title, e, method: :get%></h2>
               <p><%=t(e.description) %></p>
 
