arreglo de bug --skip-ci

--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -95,4 +95,17 @@
   <% else %>
           <p>No hay hitos que mostar</p>
   <% end %>
+
+
+  <!-- <=% form_tag ({:action => 'assign_project', :controller => 'people', :person_id => @person_vew.id}) do   %>-->
+  <!--  <=% if !@project_to_show.empty?%>-->
+  <!--  <select name="project_id" class="chosen submit-on-select" data-placeholder = <=%t('assign_to_project')%>>-->
+  <!--      <=% @project_to_show.each do |p| %>-->
+  <!--          <option value= <=%=p.id%> > <=%=p.name%></option>-->
+  <!--      <=% end %>-->
+  <!--  </select>-->
+  <!--<=% end %>-->
+  <!--<=% end %>-->
 </div>
+
+
