--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -34,6 +34,7 @@
 
 
     <div class="card-col col-xs-5 col-sm-5 col-md-5 col-lg-5">
+      <%= render 'milestones/form' %>
       <%= render 'people/timeline_card' %>
     </div>
   </div>
