--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -1,10 +1,8 @@
-<div class="container">
-  <div class="row">
-    <div class="card-col col-xs-4 col-xs-offset-4">
 
 
-      <%= form_for [@person, @person.milestones.build], html: { class:'main-form','data-toggle': 'validator'}  do |m| %>
-        <h1><span class="glyphicon glyphicon-check"></span> <%= t('mil_create') %></h1>
+<%= form_for [@person, @person.milestones.build], html: { class:'timeline-form main-form slide-on-click clearfix','data-toggle': 'validator'}  do |m| %>
+    <h1 class=""><span class="glyphicon glyphicon-check"></span> <%= t('mil_create') %></h1>
+    <div class="form-slide">
         <div class="form-group">
           <%= m.label t('mil_title'), class: "control-label" %>
           <%= m.text_field :title, class: "form-control", 'data-validation':"required" %>
@@ -78,9 +76,6 @@
         <%= m.hidden_field(:created_at, :value=>Time.now) %>
         <%= m.hidden_field(:updated_at, :value=>Time.now) %>
         <%= m.button t('mil_create'), :type => 'submit', class: "btn btn-default" %>
-
-        </div>
-      <% end %>
-      </div>
-</div>
+    </div>
+<% end %>
 <script> $(".chzn-select").chosen();</script>
