--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -14,7 +14,7 @@
                 <p><%= n.text %></p>
                 <%= link_to [n.milestone, n],
                             method: :delete,
-                            data: { confirm: t('sure?')},
+                            data: { confirm: t('note_sure?')},
                             class: 'delete' do %>
                     <span class="glyphicon glyphicon-remove"></span>
                 <% end %>
