--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -11,7 +11,6 @@
                 <td>Nombre</td>
                 <td>Descripción</td>
                 <td>Fecha límite</td>
-                <td></td>
               </tr>
           </thead>
           <tbody>
@@ -33,7 +32,7 @@
                 </td>
                 <td><%= link_to milestone_path(m),
                                 method: :delete,
-                                data: { confirm: t('sure?') } do %>
+                                data: { confirm: t('mil_sure?') } do %>
                       <span class='large-text glyphicon glyphicon-remove'></span>
                       <% end %>
                 </td>
