--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -34,7 +34,7 @@
 <p>
   <%= link_to t('note_delete'), [note.milestone, note],
               method: :delete,
-              data: { confirm: t('sure?')} %>
+              data: { confirm: t('note_sure?')} %>
 </p>
 
 <% end%>
