Retoques en el diseño de alfred33 --skip-ci

--- a/app/assets/stylesheets/_dashboard.scss.erb
+++ b/app/assets/stylesheets/_dashboard.scss.erb
@@ -4,8 +4,8 @@
 
 .profile_picture{
 
-    width:80px;
-    height:80px;
+    width:50px;
+    height:50px;
 
 }
 
@@ -13,5 +13,84 @@
 
     width:100%;
     height:100%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
 
 }
+
+#mentees_table {
+    background-color:#1ABB9B;
+    border-color:#169F85;
+
+    color:white;
+}
+
+#mentees_table h1 {
+    background-color: #169F85;
+}
+
+#mentees_table input {
+    background-color: #1ABB9B;
+}
+
+#mentees_table li{
+    background-color: #E05956;
+    display:block;
+    float:left;
+    margin-left:7px;
+    padding:4px 5px;
+    color: white;
+
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+#mentees_table li a{
+    color: white;
+}
+
+#mentees_table .datatable {
+    thead td {
+
+        cursor: pointer;
+
+        &:hover {
+            background-color: #1ABB9B;
+        }
+    }
+}
+
+#milestones_table {
+    background-color:#FF8D40;
+    border-color:#FC6A06;
+    color:white;
+}
+
+#milestones_table h1 {
+    background-color: #FC6A06;
+}
+
+#milestones_table input {
+    background-color: #FF8D40;
+}
+
+#milestones_table a{
+    color: white;
+}
+
+#milestones_table .datatable {
+    thead td {
+
+        cursor: pointer;
+
+        &:hover {
+            background-color: #FF8D40;
+        }
+    }
+}
+
+#milestones_table .calendar{
+    background-image:url('layouts/calendar-white.png');
+}
+
+
