--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="table-container">
+
+    <div class="table-container" id="mentees_table">
 
     <h1><%= "Usuarios Mentoreados" %></h1>
 
-    <table class="table datatable">
+    <table class="table datatable" data-info="false">
       <thead>
       <tr>
         <td></td>
@@ -45,11 +46,11 @@
     </div>
 
 
-    <div class="table-container">
+    <div class="table-container" id="milestones_table">
 
       <h1><%= "Hitos Pendientes" %></h1>
 
-      <table class="table datatable">
+      <table class="table datatable" data-info="false">
         <thead>
         <tr>
           <td>Nombre</td>
