Correciones de project#edit: se muestran en el formulario las tecnologias actuales del proyecto

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -22,9 +22,7 @@
 
           <div class="form-group col-xs-12">
             <%= f.label t('project_technologies'), class: "control-label" %>
-            <%= select_tag(:technologies, options_from_collection_for_select(@technologies, :id, :name), :multiple => true,
-                           :selected => @selected_tech,
-                           class: "chzn-select", 'data-placeholder'=> t('select_technologies'), 'style'=> 'width:100%') %>
+            <%= selected_technologies(@project) %>
           </div>
 
         <div class="row">
