--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -82,6 +82,19 @@ ul#skills {
   }
 }
 
+ul#mentors {
+    list-style: none;
+    padding: 0;
+    li {
+        display: inline-block;
+        padding: 3px;
+        img {
+            width: 30px;
+            border-radius: 50%;
+        }
+    }
+}
+
 #profile-picture {
 
   width: 100%;
