--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -16,25 +16,20 @@
 
         <div class="row">
           <div class="form-group col-xs-6">
-            <%= m.label t('mil_status'), class: "control-label" %>
-            <%= m.text_field :status, class: "form-control", 'data-validation': "status" %>
-            <%= t('values')+': rejected, pending, done' %>
+            <%=  m.label t('category'), class: "control-label" %>
+            <select name="category_id" class="chosen">
+                <option value='<%=nil%>'>Ninguna</option>
+                <% Category.all.each do |ca| %>
+                    <option value=<%=ca.id%> > <%=ca.name%></option>
+                <% end %>
+            </select>
           </div>
-
-
 
           <div class="form-group col-xs-6">
             <%=  m.label t('mil_icon'), class: "control-label" %>
             <%=  m.text_area :icon, class: "form-control" %>
           </div>
-        </div>
-        <div> <%=t('category')%>
-          <tr><td><select name="category_id">
-            <option value=<%=nil%> > Ninguna </option>
-            <% Category.all.each do |ca| %>
-              <option value=<%=ca.id%> > <%=ca.name%></option>
-            <% end %>
-          </select></td></tr>
+
         </div>
 
         <div class="row">
