--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,3 +1,5 @@
+<%= cloudinary_js_config %>
+
 <div class="container">
   <div class="row">
     <div class="card-col col-xs-4 col-xs-offset-4">
@@ -7,7 +9,6 @@
           <div class="form-group">
             <%= f.label t('people_new_name'), class: "control-label" %>
             <%= f.text_field :name, class: "form-control", 'data-validation': "required" %>
-            
           </div>
           <div class="form-group">
             <%= f.label t('people_new_email'), class: "control-label" %>
@@ -42,6 +43,12 @@
                 <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
               </div>
             </div>
+
+            <div class="form-group col-xs-6">
+                <%= f.label "Imagen", class: "control-label" %>
+                <%= f.cl_image_upload(:image_id, :crop => :fill, :width => 300, :height => 300) %>
+            </div>
+
           </div>
 
 
