--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -68,14 +68,17 @@
             <%= m.label t('assign_to'), class: "control-label" %>:<br>
             (<%= @person.name+t('mil_assigned') %>)
             <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('select_people'), 'style'=> 'width:100%') %>
-
+            <%= m.hidden_field(:created_at, :value=>Time.now) %>
+            <%= m.hidden_field(:updated_at, :value=>Time.now) %>
+            <br><br>
+            <div>
+            <%= m.button t('mil_create'), :type => 'submit', class: "btn btn-default" %>
+            </div>
           </div>
 
         </div>
 
-        <%= m.hidden_field(:created_at, :value=>Time.now) %>
-        <%= m.hidden_field(:updated_at, :value=>Time.now) %>
-        <%= m.button t('mil_create'), :type => 'submit', class: "btn btn-default" %>
+
     </div>
 <% end %>
 <script> $(".chzn-select").chosen();</script>
