--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -30,10 +30,12 @@
           </div>
 
           <div class="form-group">
+          <% if @people.empty? %>
+            <%= f.label t('mil_cannot_assign')%>
+          <%else%>
             <%= f.label t('assign_to'), class: "control-label" %>
-
             <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('select_people'), 'style'=> 'width:100%') %>
-
+          <%end%>
           </div>
 
 
