--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -19,13 +19,13 @@
           <div class="form-group">
             <%= f.label t('milestone_category')%>
             <br>
-            <%= f.select :category_id, Category.all.collect {|t| [t.name, t.id]}, {}, {:multiple => false, :class => "chzn-select category", 'style'=> 'width:100%'} %>
+            <%= f.select :category_id, @cats, {}, {:multiple => false, :class => "chzn-select category", 'style'=> 'width:100%'} %>
           </div>
 
           <div class="form-group feedback_autor">
               <%=  f.label t('milestone_reviewer')%>
               <br>
-              <%= f.select :feedback_author_id, Person.all.collect {|t| [t.name, t.id]}, {}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'style'=> 'width:100%'} %>
+              <%= f.select :feedback_author_id, @authors, {}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'style'=> 'width:100%'} %>
           </div>
 
           <div class="form-group">
