--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -24,13 +24,13 @@
         <div>
           <%= m.label t('milestone_category')%>
           <br>
-          <%= m.select :category_id, @cats, {}, {:multiple => false, :class => "chzn-select category", 'style'=> 'width:100%'} %>
+          <%= m.select :category_id, @cats, {:include_blank=>true}, {:multiple => false, :class => "chzn-select category", 'style'=> 'width:100%'} %>
 
         </div>
         <div class="form-group feedback_autor">
           <%=  m.label t('milestone_reviewer')%>
           <br>
-          <%= m.select :feedback_author_id, @authors, {}, { :multiple => false, :class => "chzn-select select_author", 'style'=> 'width:100%'} %>
+          <%= m.select :feedback_author_id, @authors, {:include_blank=>true}, {:multiple => false, :class => "chzn-select select_author", 'style'=> 'width:100%'} %>
         </div>
 
         <div class="row">
