Corregido mensaje de comprobacion de borrado de proyecto

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -31,7 +31,7 @@
                 </td>
                 <td><%= link_to project_path(m),
                                 method: :delete,
-                                data: { confirm: t('sure?') } do %>
+                                data: { confirm: t('project_delete_sure') } do %>
                       <span class='large-text glyphicon glyphicon-remove'></span>
                   <% end %>
                 </td>
@@ -46,37 +46,3 @@
     </div>
   </div>
 </div>
-
-
-<!--VERSION VIEJA-->
-<!--<h1><%= t('project_index_header') %></h1>-->
-<!--<table class="table">-->
-  <!--<tr>-->
-    <!--<th><%= t('project_id') %></th>-->
-    <!--<th><%= t('project_name') %> </th>-->
-    <!--<th><%= t('project_client') %></th>-->
-  <!--</tr>-->
-  <!--<% projects = Project.where(validity: 'true') %>-->
-  <!--<% projects.each do |p| %>-->
-    <!--<tr>-->
-      <!--<td>-->
-        <!--<%= p.id %>-->
-      <!--</td>-->
-      <!--<td>-->
-        <!--<%= link_to p.name, p %>-->
-      <!--</td>-->
-      <!--<td>-->
-        <!--<%= p.client %>-->
-      <!--</td>-->
-      <!--<td>-->
-        <!--<%= link_to t('edit'), edit_project_path(p) %>-->
-      <!--</td>-->
-      <!--<td>-->
-        <!--<%= link_to t('delete'), p, method: :delete %>-->
-      <!--</td>-->
-    <!--</tr>-->
-  <!--<% end %>-->
-<!--</table>-->
-<!--<% if projects.size == 0 %>-->
-<!--<em><%= t('project_no_projects') %></em>-->
-<!--<% end %>-->
